--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,19 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
-        "vinkla/alert": "^1.2",
-        "laravelcollective/html": "^5.3"
+        "laravel/framework": "5.5.*",
+        "vinkla/alert": "2.2.*",
+        "laravelcollective/html": "^5.5",
+        "barryvdh/laravel-dompdf": "0.8.x@dev",
+        "maatwebsite/excel": "2.1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "filp/whoops" : "~2.0"
     },
     "autoload": {
         "classmap": [
@@ -44,6 +47,10 @@
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
