--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,17 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.5.*",
-        "vinkla/alert": "2.2.*",
-        "laravelcollective/html": "^5.5",
+        "laravel/framework": "5.7.*",
+        "vinkla/alert": "3.1.0",
+        "laravelcollective/html": "^5.7",
         "barryvdh/laravel-dompdf": "0.8.x@dev",
-        "maatwebsite/excel": "2.1.*"
+        "maatwebsite/excel": "2.1.*",
+        "fideloper/proxy": "4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "~7.0",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
         "filp/whoops" : "~2.0"
@@ -38,18 +39,10 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
-        ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+            "@php artisan key:generate"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
@@ -57,6 +50,8 @@
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true
     }
 }
