--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,12 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.7.*",
-        "vinkla/alert": "3.1.0",
-        "laravelcollective/html": "^5.7",
+        "php": "^7.2.0",
         "barryvdh/laravel-dompdf": "0.8.x@dev",
-        "maatwebsite/excel": "2.1.*",
-        "fideloper/proxy": "4.0"
+        "fideloper/proxy": "^4.0",
+        "laracasts/flash": "^3.0",
+        "laravel/framework": "6.0.*",
+        "laravelcollective/html": "^6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
